0025963: Define HashCode() for an unsigned int within armv7 target

OSD_EnvironmentIterator - do not use _NSGetEnviron() on iOS.